# purikura-test

./: .gitignore  README.md  pyproject.toml
docs/: realtime-performance-roadmap.md
scripts/: benchmark_pipeline.py  download_models.py
src/purikura_test/: __init__.py  api_models.py  app.py  camera.py  effects.py  repository.py  runtime.py
src/purikura_test/static/: app.js  index.html  styles.css
tests/: test_app.py  test_camera.py  test_effects.py  test_repository.py  test_runtime.py
