[project]
name = "purikura-test"
version = "0.1.0"
description = "Realtime purikura-style camera effects with capture persistence."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "numpy>=1.26.0",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
